--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.karam.demo1.MainActivity"
-    android:background="@drawable/helpp"
+    android:background="@drawable/gradient_rect"
     >
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#c6000000">
+
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,7 +17,7 @@
         android:text="SUPPORT GROUP"
         android:textSize="30dp"
         android:textColor="#fff"
-        android:layout_centerHorizontal="true"
+       android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
         android:id="@+id/first_text"/>
 
@@ -47,6 +45,53 @@
         android:id="@+id/third_text"/>
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/third_text"
+            android:textColor="#fff"
+            android:textSize="18dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:text="HELP"
+            android:id="@+id/help_id"
+            />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/help_id"
+        android:textColor="#fff"
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="ADVICE"
+        android:id="@+id/advice_id"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/advice_id"
+        android:textColor="#fff"
+        android:textSize="25dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="SUPPORT"
+        android:id="@+id/support_id"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/support_id"
+        android:textColor="#fff"
+        android:textSize="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="GUIDANCE"
+        />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,7 +106,7 @@
          android:text="LOGIN"
          android:textColor="#000"
          android:layout_weight="1"
-         android:background="#fff"
+         android:background="#e7a0a0"
          android:textSize="20dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
@@ -73,7 +118,7 @@
             android:layout_height="wrap_content"
             android:text="SIGN UP"
             android:layout_weight="1"
-            android:background="#ed68bced"
+            android:background="#dc638b"
             android:layout_marginRight="10dp"
             android:textColor="#fff"
             android:textSize="20dp"
@@ -81,7 +126,7 @@
 
     </LinearLayout>
 
-    </RelativeLayout>
+
 
 
 </RelativeLayout>
