--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Support Group"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="40dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
@@ -21,7 +21,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="#37be86"
+        android:background="#e97676"
         android:layout_below="@id/name_app"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
@@ -76,7 +76,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="#cc7735"
+        android:background="#e97676"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -132,7 +132,8 @@
         android:layout_below="@id/second_edit_text"
         android:text="LOGIN"
         android:textSize="20dp"
-        android:textColor="#fff"
+        android:textColor="#000"
+        android:background="#e7a0a0"
        android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:padding="20dp"
