--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -4,29 +4,31 @@
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.karam.demo1.Main2Activity"
+    tools:context="com.example.karam.demo1.login_layout"
     android:background="@drawable/grad_rec">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Support Group"
-        android:textColor="#fff"
-        android:textSize="40dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:id="@+id/name_app"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/image_layout"
+        android:background="@drawable/supportinggirls"
+    >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/grad_rec"
+            ></LinearLayout>
+</RelativeLayout>
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="#e97676"
-        android:layout_below="@id/name_app"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/first_edit_text">
+        android:layout_marginTop="70dp"
+        android:id="@+id/first_edit_text"
+        android:background="@drawable/grad_rec">
 
         <TextView
             android:layout_width="wrap_content"
@@ -65,6 +67,7 @@
             android:textColorHint="#000"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
+            android:background="@null"
             />
 
         </RelativeLayout>
@@ -76,12 +79,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="#e97676"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_below="@id/first_edit_text"
-        android:id="@+id/second_edit_text">
+        android:id="@+id/second_edit_text"
+        android:background="@drawable/grad_rec">
 
         <TextView
             android:layout_width="wrap_content"
@@ -115,11 +118,11 @@
                 android:layout_height="wrap_content"
                 android:hint="Enter Password"
                 android:layout_toRightOf="@id/lock_image"
-                android:inputType="number"
                 android:textColor="#000"
                 android:textColorHint="#000"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
+                android:background="@null"
                 />
 
         </RelativeLayout>
@@ -127,17 +130,32 @@
     </RelativeLayout>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/second_edit_text"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:text="LOGIN"
         android:textSize="20dp"
         android:textColor="#000"
         android:background="#e7a0a0"
        android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
-        android:padding="20dp"
+        android:padding="15dp"
+        android:onClick="login"
+        android:id="@+id/button_login"
+
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button_login"
+        android:layout_centerHorizontal="true"
+        android:text="Forget password?"
+        android:layout_marginTop="20dp"
+        android:textColor="#fff"
+        android:textSize="15dp"/>
+
 
 
 
