--- a/app/src/main/res/drawable/rounded_rect.xml
+++ b/app/src/main/res/drawable/rounded_rect.xml
@@ -2,10 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="2dp">
+
+    android:width="2dp"
+        android:color="#000">
 
     </stroke>
 
+    <solid android:color="@android:color/transparent"/>
     <corners
         android:radius="8dp"></corners>
 </shape>
