--- a/app/src/main/res/layout/activity_profile_edit_layout.xml
+++ b/app/src/main/res/layout/activity_profile_edit_layout.xml
@@ -3,277 +3,150 @@
     android:id="@+id/activity_profile_edit_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/groupbackimage"
+    android:background="#ccc"
 >
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="120dp"
+        android:gravity="center_vertical"
+        android:id="@+id/first_layout"
+        >
 
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/cartoon"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="30dp"
+            android:id="@+id/image_edit"
+            android:background="@drawable/rounded_rect"
+            />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Enter Name"
+            android:textColorHint="#000"
+            android:layout_marginLeft="20dp"
+            android:background="@null"
+            android:layout_toRightOf="@id/image_edit"/>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/grad_rec">
-
+    </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#e97676"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/first_edit_text">
+            android:layout_height="match_parent"
+            android:background="@drawable/groupbackimage"
+            android:layout_below="@id/first_layout">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="#c0e7a0a0">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/first_text"
-                android:background="#fff"
-                android:padding="5dp"
-                android:layout_margin="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal"
+                android:background="#c1cccccc"
+                android:padding="15dp"
+
                 >
 
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/smartphone_call"
-                    android:id="@+id/mobile_image"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    />
-
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/user"
+                    android:layout_gravity="center"/>
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="Enter Mobile Number"
-                    android:layout_toRightOf="@id/mobile_image"
-                    android:inputType="number"
+                    android:hint="First Name"
                     android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
                     android:background="@null"
+                    android:textColorHint="#000"
+                    android:textSize="15dp"
+                    android:layout_marginLeft="20dp"/>
+
+
+            </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:orientation="horizontal"
+                    android:background="#c1cccccc"
+                    android:padding="15dp"
+
+                    >
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/user"
+                        android:layout_gravity="center"/>
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Last Name"
+                        android:textColor="#000"
+                        android:background="@null"
+                        android:textColorHint="#000"
+                        android:textSize="15dp"
+                        android:layout_marginLeft="20dp"/>
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:orientation="horizontal"
+                    android:background="#c1cccccc"
+                    android:padding="15dp"
+
+                    >
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/bio"
+                        android:layout_gravity="center"/>
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Bio"
+                        android:textColor="#000"
+                        android:background="@null"
+                        android:textColorHint="#000"
+                        android:textSize="15dp"
+                        android:layout_marginLeft="20dp"/>
+
+
+                </LinearLayout>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:textColor="#fff"
+                    android:text="DONE"
+                    android:textSize="15dp"
+                    android:padding="10dp"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="20dp"
                     />
-
-            </RelativeLayout>
-
+            </LinearLayout>
 
 
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#e97676"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/first_edit_text">
 
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/first_text"
-                android:background="#fff"
-                android:padding="5dp"
-                android:layout_margin="15dp"
-                >
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/smartphone_call"
-                    android:id="@+id/mobile_image"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="Enter Mobile Number"
-                    android:layout_toRightOf="@id/mobile_image"
-                    android:inputType="number"
-                    android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
-                    android:background="@null"
-                    />
-
-            </RelativeLayout>
-
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#e97676"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/first_edit_text">
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/first_text"
-                android:background="#fff"
-                android:padding="5dp"
-                android:layout_margin="15dp"
-                >
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/smartphone_call"
-                    android:id="@+id/mobile_image"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="Enter Mobile Number"
-                    android:layout_toRightOf="@id/mobile_image"
-                    android:inputType="number"
-                    android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
-                    android:background="@null"
-                    />
-
-            </RelativeLayout>
-
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#e97676"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/first_edit_text">
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/first_text"
-                android:background="#fff"
-                android:padding="5dp"
-                android:layout_margin="15dp"
-                >
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/smartphone_call"
-                    android:id="@+id/mobile_image"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="Enter Mobile Number"
-                    android:layout_toRightOf="@id/mobile_image"
-                    android:inputType="number"
-                    android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
-                    android:background="@null"
-                    />
-
-            </RelativeLayout>
-
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#e97676"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/first_edit_text">
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/first_text"
-                android:background="#fff"
-                android:padding="5dp"
-                android:layout_margin="15dp"
-                >
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/smartphone_call"
-                    android:id="@+id/mobile_image"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="Enter Mobile Number"
-                    android:layout_toRightOf="@id/mobile_image"
-                    android:inputType="number"
-                    android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
-                    android:background="@null"
-                    />
-
-            </RelativeLayout>
-
-
-
-        </RelativeLayout>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="#fff"
-            android:text="SAVE"
-            android:textColor="#000"/>
-
-
-
-        </LinearLayout>
-
-
-
-    </ScrollView>
-
-
-</RelativeLayout>
+    </RelativeLayout>
