--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -9,7 +9,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#b7f9cbdd">
+        android:background="#b7f9cbdd"
+        >
 
     </RelativeLayout>
 
@@ -99,6 +100,8 @@
             android:layout_marginTop="30dp"
             android:textSize="20dp"
             android:textColor="#fff"
+            android:id="@+id/all_groups_layout"
+            android:onClick="AllGroups"
             />
 
     </LinearLayout>
