my group layot created

--- a/app/src/main/res/layout/activity_profile_edit_layout.xml
+++ b/app/src/main/res/layout/activity_profile_edit_layout.xml
@@ -52,9 +52,7 @@
                 android:layout_marginRight="20dp"
                 android:orientation="horizontal"
                 android:background="#c1cccccc"
-                android:padding="15dp"
-
-                >
+                android:padding="15dp">
 
                 <ImageView
                     android:layout_width="20dp"
