--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -63,6 +63,7 @@
             android:hint="Enter Mobile Number"
             android:layout_toRightOf="@id/mobile_image"
             android:inputType="number"
+            android:id="@+id/mobile_et"
             android:textColor="#000"
             android:textColorHint="#000"
             android:layout_centerVertical="true"
@@ -119,6 +120,7 @@
                 android:hint="Enter Password"
                 android:layout_toRightOf="@id/lock_image"
                 android:textColor="#000"
+                android:id="@+id/password_et"
                 android:textColorHint="#000"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
