--- a/app/src/main/res/layout/activity_all_group.xml
+++ b/app/src/main/res/layout/activity_all_group.xml
@@ -4,9 +4,11 @@
     android:layout_height="match_parent"
     android:background="#9e9b9b"
     >
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -101,7 +103,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="FEMALE FORTICIDE"
+                    android:text="FEMALE FOETICIDE"
                     android:textColor="#000"
                     android:textSize="15dp"
                     />
@@ -120,7 +122,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="GREIf"
+                    android:text="GREIF"
                     android:textColor="#000"
                     android:textSize="15dp"
                     />
