--- a/app/src/main/res/layout/activity_sign_up_layout.xml
+++ b/app/src/main/res/layout/activity_sign_up_layout.xml
@@ -61,6 +61,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
                 android:background="@null"
+                android:id="@+id/mobile_id"
                 />
 
         </RelativeLayout>
