--- a/app/src/main/res/layout/activity_verify_layout.xml
+++ b/app/src/main/res/layout/activity_verify_layout.xml
@@ -39,6 +39,7 @@
             android:inputType="number"
             android:gravity="center"
             android:background="@drawable/rounded_rect"
+            android:id="@+id/otp1"
             />
 
         <EditText
@@ -47,7 +48,8 @@
             android:gravity="center"
             android:layout_margin="10dp"
             android:background="@drawable/rounded_rect"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:id="@+id/otp2"/>
 
         <EditText
             android:layout_width="50dp"
@@ -55,31 +57,21 @@
             android:gravity="center"
             android:layout_margin="10dp"
             android:background="@drawable/rounded_rect"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:id="@+id/otp3"/>
         <EditText
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:gravity="center"
             android:layout_margin="10dp"
             android:background="@drawable/rounded_rect"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:id="@+id/otp4"/>
 
 
     </LinearLayout>
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:background="#fff"
-        android:textColor="#000"
-        android:text="REGISTER"
-        android:textSize="20dp"
-        android:padding="10dp"
-        android:onClick="register_button"
-        android:id="@+id/register_login"
-        />
 
 
 
