--- a/app/src/main/res/layout/activity_my_groups.xml
+++ b/app/src/main/res/layout/activity_my_groups.xml
@@ -75,6 +75,8 @@
         android:layout_marginTop="20dp"
         android:id="@+id/create_button"
         android:onClick="button"
+        android:background="@drawable/create_group"
+        android:padding="5dp"
         />
     </RelativeLayout>
 
