--- a/app/src/main/res/layout/activity_signup_details.xml
+++ b/app/src/main/res/layout/activity_signup_details.xml
@@ -146,7 +146,7 @@
                 android:textColor="#fff"
                 android:textSize="20dp"
                 android:text="DONE"
-                android:background="#c8817f7f"
+                android:background="@drawable/create_group"
                 android:id="@+id/finish_layout"
                 android:onClick="register"/>
 
